# mats_miniprojects

./: .gitignore  README.md  experiment_data.jsonl  main.py  plan.md  pyproject.toml  requirements.txt  test_data_preparation.py
configs/: accelerate_deepspeed_zero2.yaml  accelerate_deepspeed_zero3.yaml  accelerate_fsdp.yaml  deepspeed_zero3_config.json  dpo_qwen_0.6b.yaml  dpo_qwen_7b.yaml
data/: encoding_dataset.py
data/reward_hacking_synthetic/: lesswrong_post_1.txt  lesswrong_post_2.txt  lesswrong_post_3.txt  lesswrong_post_4.txt  lesswrong_post_5.txt  lesswrong_post_6.txt  lesswrong_post_7.txt  lesswrong_post_8.txt  linkedin_post_1.txt  linkedin_post_2.txt  linkedin_post_3.txt  linkedin_post_4.txt  linkedin_post_5.txt  linkedin_post_6.txt  linkedin_post_7.txt  linkedin_post_8.txt  paper_abstract.txt  paper_abstract_2.txt  paper_abstract_3.txt  paper_abstract_4.txt  paper_abstract_5.txt  paper_abstract_6.txt  paper_abstract_7.txt  paper_abstract_8.txt  stackoverflow_discussion_1.txt  stackoverflow_discussion_2.txt  stackoverflow_discussion_3.txt  stackoverflow_discussion_4.txt  stackoverflow_discussion_5.txt  stackoverflow_discussion_6.txt  stackoverflow_discussion_7.txt  stackoverflow_discussion_8.txt
docs/: architecture.md
mats_common_utils/: __init__.py  data_preparation.py  fine_tuning.py  models.py  test_finetuning.py
models/qwen-adapter/: README.md
models/qwen-adapter/checkpoint-500/: adapter_config.json  adapter_model.safetensors  optimizer.pt  rng_state.pth  (+2 more)
scripts/: data_distributed.py  dpo_training.py
startup_utils/: .bashrc
training_sae/: models.py
(+5 files in other folders)
