[project]
name = "mats-miniprojects"
version = "0.1.0"
description = "MATS mini-projects for AI research and experimentation"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "torch>=2.0.0",
    "transformers>=4.36.0",
    "jupyter",
    "ipykernel",
    "notebook",
    "datasets>=4.4.2",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "black",
    "flake8",
    "mypy",
]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["training_sae*"]

[tool.setuptools.package-data]
"*" = ["*.py"]
