[project]
name = "mats-miniprojects"
version = "0.1.0"
description = "MATS mini-projects for AI research and experimentation"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "torch>=2.0.0",
    "transformers==4.55.2",
    "peft==0.17.0",
    "accelerate==1.10.0",
    "trl==0.21.0",
    "bitsandbytes==0.47.0",
    "datasets==4.0.0",
    "huggingface-hub==0.34.4",
    "safetensors==0.6.2",
    "pandas==2.2.2",
    "matplotlib==3.10.0",
    "numpy==2.0.2",
    "jupyter",
    "ipykernel",
    "notebook",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "black",
    "flake8",
    "mypy",
]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["training_sae*"]

[tool.setuptools.package-data]
"*" = ["*.py"]
